# afb-idl

./: CMakeLists.txt  afbidl-schema.json  exprefs.c  exprefs.h  getref.c  getref.h  idl-perms.c  idl-perms.json  json2c.c  json2c.h  main-exprefs.c  main-genskel.c  main-json2c.c
bfbs/: .gitignore  Makefile  README.md  afb-fbgen  bfbs2json.c  fb-template-CMakeLists.txt  fb-template-cvt.c  fb-template-cvt.h  fbgen-api  sample.fbs
flatbuffers/: .gitignore  CMakeLists.txt  README.md  afb-fbgen  bfbs2json.c  fb-template-CMakeLists.txt  fb-template-api.c  fb-template-api.h  fb-template-cli.c  fb-template-cli.h  fb-template-cvt.c  fb-template-cvt.h  fbgen.sh  fcc_blinky.fbs  jfbsextr.c
flatbuffers/sample/: .gitignore  README.md  fb-template-api.c  sample.fbs
